kubernetes/postgres/postgresql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgresql
spec:
  ingressClassName: nodejs
  rules:
    - host: postresql.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: postgresql
                port:
                  number: 5432
            path: /
